// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runScenario snapshots > matches snapshot for preset=base 1`] = `
{
  "allocations": [
    {
      "bucket": "mining",
      "pct": 35,
      "yield_contribution_bps": 786,
    },
    {
      "bucket": "btc_tactical",
      "pct": 15,
      "yield_contribution_bps": 30,
    },
    {
      "bucket": "usdc_base",
      "pct": 40,
      "yield_contribution_bps": 292,
    },
    {
      "bucket": "stable_reserve",
      "pct": 10,
      "yield_contribution_bps": 45,
    },
  ],
  "apy_range": {
    "high": 13.61,
    "low": 9.22,
  },
  "assumptions": [
    "methodology_version=v1.0",
    "preset=base; vault_mode=balanced; generated_at=2026-01-01T00:00:00.000Z",
    "hashprice=0.085 USD/TH/day, energy=0.045 USD/kWh, uptime=98% (paper phase)",
    "btc_price_change_30d=0%, vol_index=45, stable_base_apy=4.5%",
    "Outputs are projections, not guaranteed. Past performance does not predict future results.",
  ],
  "btc_tactical": {
    "guardrails": [
      {
        "detail": "vol_index=45 (warning > 65, breached > 80)",
        "id": "G-BTC-VOL",
        "kind": "volatility",
        "label": "Volatility guardrail",
        "status": "normal",
      },
      {
        "detail": "margin_score=92.25 (warning [50, 70), healthy >= 70)",
        "id": "G-BTC-MARGIN",
        "kind": "mining_margin",
        "label": "Mining margin guardrail",
        "status": "healthy",
      },
      {
        "detail": "vault_mode=balanced; opportunistic mode raises BTC concentration exposure",
        "id": "G-BTC-CONC",
        "kind": "concentration",
        "label": "Concentration guardrail",
        "status": "normal",
      },
      {
        "detail": "MVP placeholder; on-chain depth feed wired in V1",
        "id": "G-BTC-LIQ",
        "kind": "liquidity",
        "label": "Liquidity guardrail",
        "status": "normal",
      },
    ],
    "targetExposurePct": 12,
    "triggers": [
      {
        "action": "convert 5% AUM USDC -> BTC",
        "armed": false,
        "condition": "BTC 30d change <= -20% AND vol_index < 60",
        "id": "R-BTC-1",
        "kind": "accumulate",
      },
      {
        "action": "take 25% of BTC position",
        "armed": false,
        "condition": "BTC 30d change >= 40%",
        "id": "R-BTC-2",
        "kind": "take_profit",
      },
      {
        "action": "reduce BTC exposure to 50% of target",
        "armed": false,
        "condition": "vol_index > 80",
        "id": "R-BTC-3",
        "kind": "reduce_size",
      },
      {
        "action": "maintain current BTC exposure within mode bounds",
        "armed": true,
        "condition": "no accumulate/take_profit/reduce_size rule armed",
        "id": "R-BTC-4",
        "kind": "hold",
      },
    ],
  },
  "confidence": "medium",
  "mining_margin_score": 92.25,
  "mode": "balanced",
  "risk_score": 44.81,
  "stressed_apy": 5.99,
}
`;

exports[`runScenario snapshots > matches snapshot for preset=btc_bear 1`] = `
{
  "allocations": [
    {
      "bucket": "mining",
      "pct": 25,
      "yield_contribution_bps": 373,
    },
    {
      "bucket": "btc_tactical",
      "pct": 5,
      "yield_contribution_bps": -30,
    },
    {
      "bucket": "usdc_base",
      "pct": 55,
      "yield_contribution_bps": 402,
    },
    {
      "bucket": "stable_reserve",
      "pct": 15,
      "yield_contribution_bps": 68,
    },
  ],
  "apy_range": {
    "high": 9.59,
    "low": 6.5,
  },
  "assumptions": [
    "methodology_version=v1.0",
    "preset=btc_bear; vault_mode=defensive; generated_at=2026-01-01T00:00:00.000Z",
    "hashprice=0.06 USD/TH/day, energy=0.047 USD/kWh, uptime=98% (paper phase)",
    "btc_price_change_30d=-40%, vol_index=60, stable_base_apy=4.5%",
    "Outputs are projections, not guaranteed. Past performance does not predict future results.",
  ],
  "btc_tactical": {
    "guardrails": [
      {
        "detail": "vol_index=60 (warning > 65, breached > 80)",
        "id": "G-BTC-VOL",
        "kind": "volatility",
        "label": "Volatility guardrail",
        "status": "normal",
      },
      {
        "detail": "margin_score=61.37 (warning [50, 70), healthy >= 70)",
        "id": "G-BTC-MARGIN",
        "kind": "mining_margin",
        "label": "Mining margin guardrail",
        "status": "warning",
      },
      {
        "detail": "vault_mode=defensive; opportunistic mode raises BTC concentration exposure",
        "id": "G-BTC-CONC",
        "kind": "concentration",
        "label": "Concentration guardrail",
        "status": "normal",
      },
      {
        "detail": "MVP placeholder; on-chain depth feed wired in V1",
        "id": "G-BTC-LIQ",
        "kind": "liquidity",
        "label": "Liquidity guardrail",
        "status": "normal",
      },
    ],
    "targetExposurePct": 5,
    "triggers": [
      {
        "action": "convert 5% AUM USDC -> BTC",
        "armed": false,
        "condition": "BTC 30d change <= -20% AND vol_index < 60",
        "id": "R-BTC-1",
        "kind": "accumulate",
      },
      {
        "action": "take 25% of BTC position",
        "armed": false,
        "condition": "BTC 30d change >= 40%",
        "id": "R-BTC-2",
        "kind": "take_profit",
      },
      {
        "action": "reduce BTC exposure to 50% of target",
        "armed": false,
        "condition": "vol_index > 80",
        "id": "R-BTC-3",
        "kind": "reduce_size",
      },
      {
        "action": "maintain current BTC exposure within mode bounds",
        "armed": true,
        "condition": "no accumulate/take_profit/reduce_size rule armed",
        "id": "R-BTC-4",
        "kind": "hold",
      },
    ],
  },
  "confidence": "medium",
  "mining_margin_score": 61.37,
  "mode": "defensive",
  "risk_score": 65.72,
  "stressed_apy": 4.23,
}
`;

exports[`runScenario snapshots > matches snapshot for preset=btc_bull 1`] = `
{
  "allocations": [
    {
      "bucket": "mining",
      "pct": 35,
      "yield_contribution_bps": 963,
    },
    {
      "bucket": "btc_tactical",
      "pct": 15,
      "yield_contribution_bps": 270,
    },
    {
      "bucket": "usdc_base",
      "pct": 40,
      "yield_contribution_bps": 292,
    },
    {
      "bucket": "stable_reserve",
      "pct": 10,
      "yield_contribution_bps": 45,
    },
  ],
  "apy_range": {
    "high": 18.53,
    "low": 12.56,
  },
  "assumptions": [
    "methodology_version=v1.0",
    "preset=btc_bull; vault_mode=balanced; generated_at=2026-01-01T00:00:00.000Z",
    "hashprice=0.102 USD/TH/day, energy=0.045 USD/kWh, uptime=98% (paper phase)",
    "btc_price_change_30d=60%, vol_index=35, stable_base_apy=4.5%",
    "Outputs are projections, not guaranteed. Past performance does not predict future results.",
  ],
  "btc_tactical": {
    "guardrails": [
      {
        "detail": "vol_index=35 (warning > 65, breached > 80)",
        "id": "G-BTC-VOL",
        "kind": "volatility",
        "label": "Volatility guardrail",
        "status": "normal",
      },
      {
        "detail": "margin_score=100 (warning [50, 70), healthy >= 70)",
        "id": "G-BTC-MARGIN",
        "kind": "mining_margin",
        "label": "Mining margin guardrail",
        "status": "healthy",
      },
      {
        "detail": "vault_mode=balanced; opportunistic mode raises BTC concentration exposure",
        "id": "G-BTC-CONC",
        "kind": "concentration",
        "label": "Concentration guardrail",
        "status": "normal",
      },
      {
        "detail": "MVP placeholder; on-chain depth feed wired in V1",
        "id": "G-BTC-LIQ",
        "kind": "liquidity",
        "label": "Liquidity guardrail",
        "status": "normal",
      },
    ],
    "targetExposurePct": 9,
    "triggers": [
      {
        "action": "convert 5% AUM USDC -> BTC",
        "armed": false,
        "condition": "BTC 30d change <= -20% AND vol_index < 60",
        "id": "R-BTC-1",
        "kind": "accumulate",
      },
      {
        "action": "take 25% of BTC position",
        "armed": true,
        "condition": "BTC 30d change >= 40%",
        "id": "R-BTC-2",
        "kind": "take_profit",
      },
      {
        "action": "reduce BTC exposure to 50% of target",
        "armed": false,
        "condition": "vol_index > 80",
        "id": "R-BTC-3",
        "kind": "reduce_size",
      },
      {
        "action": "maintain current BTC exposure within mode bounds",
        "armed": false,
        "condition": "no accumulate/take_profit/reduce_size rule armed",
        "id": "R-BTC-4",
        "kind": "hold",
      },
    ],
  },
  "confidence": "medium",
  "mining_margin_score": 100,
  "mode": "balanced",
  "risk_score": 46.09,
  "stressed_apy": 8.16,
}
`;

exports[`runScenario snapshots > matches snapshot for preset=extreme_stress 1`] = `
{
  "allocations": [
    {
      "bucket": "mining",
      "pct": 25,
      "yield_contribution_bps": 304,
    },
    {
      "bucket": "btc_tactical",
      "pct": 5,
      "yield_contribution_bps": -30,
    },
    {
      "bucket": "usdc_base",
      "pct": 55,
      "yield_contribution_bps": 363,
    },
    {
      "bucket": "stable_reserve",
      "pct": 15,
      "yield_contribution_bps": 68,
    },
  ],
  "apy_range": {
    "high": 8.32,
    "low": 5.64,
  },
  "assumptions": [
    "methodology_version=v1.0",
    "preset=extreme_stress; vault_mode=defensive; generated_at=2026-01-01T00:00:00.000Z",
    "hashprice=0.051 USD/TH/day, energy=0.05 USD/kWh, uptime=98% (paper phase)",
    "btc_price_change_30d=-50%, vol_index=85, stable_base_apy=3.8%",
    "Outputs are projections, not guaranteed. Past performance does not predict future results.",
  ],
  "btc_tactical": {
    "guardrails": [
      {
        "detail": "vol_index=85 (warning > 65, breached > 80)",
        "id": "G-BTC-VOL",
        "kind": "volatility",
        "label": "Volatility guardrail",
        "status": "breached",
      },
      {
        "detail": "margin_score=49.97 (warning [50, 70), healthy >= 70)",
        "id": "G-BTC-MARGIN",
        "kind": "mining_margin",
        "label": "Mining margin guardrail",
        "status": "breached",
      },
      {
        "detail": "vault_mode=defensive; opportunistic mode raises BTC concentration exposure",
        "id": "G-BTC-CONC",
        "kind": "concentration",
        "label": "Concentration guardrail",
        "status": "normal",
      },
      {
        "detail": "MVP placeholder; on-chain depth feed wired in V1",
        "id": "G-BTC-LIQ",
        "kind": "liquidity",
        "label": "Liquidity guardrail",
        "status": "normal",
      },
    ],
    "targetExposurePct": 3,
    "triggers": [
      {
        "action": "convert 5% AUM USDC -> BTC",
        "armed": false,
        "condition": "BTC 30d change <= -20% AND vol_index < 60",
        "id": "R-BTC-1",
        "kind": "accumulate",
      },
      {
        "action": "take 25% of BTC position",
        "armed": false,
        "condition": "BTC 30d change >= 40%",
        "id": "R-BTC-2",
        "kind": "take_profit",
      },
      {
        "action": "reduce BTC exposure to 50% of target",
        "armed": true,
        "condition": "vol_index > 80",
        "id": "R-BTC-3",
        "kind": "reduce_size",
      },
      {
        "action": "maintain current BTC exposure within mode bounds",
        "armed": false,
        "condition": "no accumulate/take_profit/reduce_size rule armed",
        "id": "R-BTC-4",
        "kind": "hold",
      },
    ],
  },
  "confidence": "low",
  "mining_margin_score": 49.97,
  "mode": "defensive",
  "risk_score": 71.33,
  "stressed_apy": 3.67,
}
`;

exports[`runScenario snapshots > matches snapshot for preset=mining_compression 1`] = `
{
  "allocations": [
    {
      "bucket": "mining",
      "pct": 35,
      "yield_contribution_bps": 559,
    },
    {
      "bucket": "btc_tactical",
      "pct": 15,
      "yield_contribution_bps": 30,
    },
    {
      "bucket": "usdc_base",
      "pct": 40,
      "yield_contribution_bps": 292,
    },
    {
      "bucket": "stable_reserve",
      "pct": 10,
      "yield_contribution_bps": 45,
    },
  ],
  "apy_range": {
    "high": 10.93,
    "low": 7.41,
  },
  "assumptions": [
    "methodology_version=v1.0",
    "preset=mining_compression; vault_mode=balanced; generated_at=2026-01-01T00:00:00.000Z",
    "hashprice=0.064 USD/TH/day, energy=0.052 USD/kWh, uptime=98% (paper phase)",
    "btc_price_change_30d=0%, vol_index=55, stable_base_apy=4.5%",
    "Outputs are projections, not guaranteed. Past performance does not predict future results.",
  ],
  "btc_tactical": {
    "guardrails": [
      {
        "detail": "vol_index=55 (warning > 65, breached > 80)",
        "id": "G-BTC-VOL",
        "kind": "volatility",
        "label": "Volatility guardrail",
        "status": "normal",
      },
      {
        "detail": "margin_score=65.65 (warning [50, 70), healthy >= 70)",
        "id": "G-BTC-MARGIN",
        "kind": "mining_margin",
        "label": "Mining margin guardrail",
        "status": "warning",
      },
      {
        "detail": "vault_mode=balanced; opportunistic mode raises BTC concentration exposure",
        "id": "G-BTC-CONC",
        "kind": "concentration",
        "label": "Concentration guardrail",
        "status": "normal",
      },
      {
        "detail": "MVP placeholder; on-chain depth feed wired in V1",
        "id": "G-BTC-LIQ",
        "kind": "liquidity",
        "label": "Liquidity guardrail",
        "status": "normal",
      },
    ],
    "targetExposurePct": 12,
    "triggers": [
      {
        "action": "convert 5% AUM USDC -> BTC",
        "armed": false,
        "condition": "BTC 30d change <= -20% AND vol_index < 60",
        "id": "R-BTC-1",
        "kind": "accumulate",
      },
      {
        "action": "take 25% of BTC position",
        "armed": false,
        "condition": "BTC 30d change >= 40%",
        "id": "R-BTC-2",
        "kind": "take_profit",
      },
      {
        "action": "reduce BTC exposure to 50% of target",
        "armed": false,
        "condition": "vol_index > 80",
        "id": "R-BTC-3",
        "kind": "reduce_size",
      },
      {
        "action": "maintain current BTC exposure within mode bounds",
        "armed": true,
        "condition": "no accumulate/take_profit/reduce_size rule armed",
        "id": "R-BTC-4",
        "kind": "hold",
      },
    ],
  },
  "confidence": "medium",
  "mining_margin_score": 65.65,
  "mode": "balanced",
  "risk_score": 50.94,
  "stressed_apy": 4.82,
}
`;
